--- a/web/views/vaga/card.html
+++ b/web/views/vaga/card.html
@@ -3,7 +3,7 @@
         <div class="flex justify-between gap-4 items-center">
             <div>
                 <h2 class="card-title">{vaga}</h2>
-                <span class="font-medium text-xs uppercase text-accent">{empresa}</span>
+                <span class="font-medium text-xs uppercase text-accent">{empresa} {percentual}</span>
             </div>
             <div class="h-[3rem] w-[3rem] flex items-center border rounded-full">
                 <img src="{logo}" class="object-cover rounded-full " alt="Logo {empresa}"/>
