--- a/web/views/vaga/painelRecomendado.phtml
+++ b/web/views/vaga/painelRecomendado.phtml
@@ -14,9 +14,9 @@
             <div class="grid xl:grid-cols-2 gap-x-4 gap-y-8 w-full">
                 <?php
                 /** @var array<Vaga> $vagasPorPercentual */
-                foreach ($vagasPorPercentual as $percentual) :
-                    foreach ($percentual as $vaga) :
-                        echo $vaga->cardFormatado();
+                foreach ($vagasPorPercentual as $percentual => $vagas ) :
+                    foreach ($vagas as $vaga) :
+                        echo $vaga->cardFormatado($percentual);
                     endforeach;
                 endforeach; ?>
             </div>
