--- a/web/views/vaga/card.html
+++ b/web/views/vaga/card.html
@@ -3,7 +3,7 @@
         <div class="flex justify-between gap-4">
             <div>
                 <h2 class="card-title">{vaga}</h2>
-                <span class="font-medium text-xs uppercase text-accent">{empresa}</span>
+                <span class="font-medium text-xs uppercase text-accent">{empresa} {percentual}</span>
             </div>
             <div class="h-10 w-10">
                 <img src="{logo}" width="40" height="40" class="object-cover w-full h-full rounded-full" alt="Logo {empresa}"/>
