--- a/web/views/beneficio/formulario.phtml
+++ b/web/views/beneficio/formulario.phtml
@@ -1,9 +1,9 @@
 <div class="container container-md w-50">
     <form method="post" action="/beneficio/processaCadastrar">
         <div class="row g-3 align-items-center mb-2">
-            <input type="hidden" name="id" value=""/>
+            <input type="hidden" name="id" value="<?= isset($beneficio) ? $beneficio->getId() : '' ?>"/>
             <div class="col-md-12 form-floating">
-                <input type="text" class="form-control" name="beneficio" id="beneficio" value="" required>
+                <input type="text" class="form-control" name="beneficio" id="beneficio" value="<?= isset($beneficio) ? $beneficio->getNome() : '' ?>" required>
                 <label for="beneficio" class="col-form-label">Beneficio</label>
             </div>
         </div>
