--- a/web/views/candidato/listar.phtml
+++ b/web/views/candidato/listar.phtml
@@ -37,7 +37,13 @@
                         </a>
                     </td>
                     <td class="border border-slate-300 dark:border-slate-700 text-slate-500 dark:text-slate-400">
-                        
+                        <?php 
+                        /** @var array<Propostas> $propostas */
+                        foreach ($propostas as $proposta) : ?>
+                            <?php if (!empty($proposta) && $proposta->getVaga()->getId() == $vaga->getVaga()->getId()) : ?>
+                                <a class="btn btn-primary" href="/proposta/exibir?vagaId=<?=$proposta->getVaga()->getId()?>">Detalhes</a>
+                            <?php endif; ?>
+                        <?php endforeach; ?>
                     </td>
                 </tr>
             <?php endforeach; ?>
