--- a/web/views/propostas/cadastrar.phtml
+++ b/web/views/propostas/cadastrar.phtml
@@ -1,118 +1,103 @@
 <?php /** @var Vaga $vaga */ ?>
-<div class="container container-sm w-75">
+<div id="vagas" class="flex flex-col px-4 py-10 gap-10 justify-center items-center">
+    <h2 class="text-3xl font-bold">Proposta de contratação</h2>
+</div>
+<div class="mx-auto max-w-4xl border p-4 m-1 mb-20 rounded-xl bg-white">
     <form method="post" action="/propostas/salvar">
-        <input type="hidden" />
-            <div class="col-md-6">
-                <div class="col-md-2 form-floating">
-                    <input type="text" class="form-control" name="vaga" id="vaga" value="<?= $_GET['id']?>">
-                    <label for="vaga" class="col-form-label">Vaga</label>
+        <input type="hidden" name="vaga" id="vaga" value="<?= $_GET['id'] ?>">
+        <input type="hidden" name="candidato" id="candidato" value="<?= $_GET['candidatoId'] ?>">
+        <div class="flex space-x-2">
+            <label class="form-control w-3/4">
+                <div class="label">
+                    <span class="label-text">Cargo</span>
                 </div>
-                <div class="col-md-2 form-floating">
-                    <input type="text" class="form-control" name="candidato" id="candidato" value="<?= $_GET['candidatoId'] ?>">
-                    <label for="candidato" class="col-form-label">Candidato</label>
+                <input type="text" class="input input-bordered w-full" min="0" name="cargo" id="cargo" value="<?= isset($vaga) ? $vaga->getTitulo() : '' ?>">
+            </label>
+            <label class="form-control w-1/4">
+                <div class="label">
+                    <span class="label-text">Salário</span>
                 </div>
-                <div class="input-group">
-                    <span class="input-group-text">R$</span>
-                    <div class="form-floating">
-                        <input type="number" class="form-control" name="salario" id="salario" value="<?= isset($vaga) ? $vaga->getSalario() : '' ?>" min="0">
-                        <label for="salario" class="col-form-label">Salário</label>
-                    </div>
-                </div>
-            </div>
+                <label class="input input-bordered flex items-center">
+                    R$
+                    <input type="number" class="input hover:border-0 focus:border-0 w-full text-right pe-0" min="0" name="salario" id="salario" value="<?= isset($vaga) ? $vaga->getSalario() : '' ?>">,00
+                </label>
+            </label>
         </div>
-        <div class="row g-3 align-items-center mb-2">
-            <!-- REGIME DE CONTRATAÇÃO -->
-            <div class="col-md-6 form-floating">
-                <select class="form-control form-select" name="regime_contratacao" id="regime_contratacao" required>
-                    <option value="">Selecione</option>
+        <div class="flex space-x-2">
+            <label class="form-control w-1/4">
+                <div class="label">
+                    <span class="label-text">Regime de Contratação</span>
+                </div>
+                <select class="select select-bordered" name="regime_contratacao" id="regime_contratacao" required>
+                    <option selected disabled value="">Selecione</option>
                     <?php foreach (RegimeContratacaoEnum::forSelect() as $indice => $valor): ?>
                         <option value="<?= $indice ?>" <?= !empty($vaga) && $vaga->getRegimeContratacao() == $indice ? 'selected' : '' ?>><?= $valor ?></option>
                     <?php endforeach; ?>
                 </select>
-                <label for="regimeContratacao" class="col-form-label">Regime de Contratação</label>
-            </div>
-            <!-- REGIME DE TRABALHO -->
-            <div class="col-md-6 form-floating">
-                <select class="form-control form-select" name="regime_trabalho" id="regime_trabalho" required>
-                    <option value="">Selecione</option>
+            </label>
+            <label class="form-control w-1/4">
+                <div class="label">
+                    <span class="label-text">Regime de Trabalho</span>
+                </div>
+                <select class="select select-bordered" name="regime_trabalho" id="regime_trabalho" required>
+                    <option selected disabled value="">Selecione</option>
                     <?php foreach (RegimeTrabalhoEnum::forSelect() as $indice => $valor): ?>
                         <option value="<?= $indice ?>" <?= !empty($vaga) && $vaga->getRegimeTrabalho() == $indice ? 'selected' : '' ?>><?= $valor ?></option>
                     <?php endforeach; ?>
                 </select>
-                <label for="regimeTrabalho" class="col-form-label">Regime de Trabalho</label>
-            </div>
-        </div>
-        <div class="row g-3 align-items-center mb-2">
-            <!-- NÍVEL DE SENIORIDADE -->
-            <div class="col-md-6 form-floating">
-                <select class="form-control form-select" name="nivel_senioridade" id="nivel_senioridade" required>
-                    <option value="">Selecione</option>
+            </label>
+            <label class="form-control w-1/4">
+                <div class="label">
+                    <span class="label-text">Nível de Senioridade</span>
+                </div>
+                <select class="select select-bordered" name="nivel_senioridade" id="nivel_senioridade" required>
+                    <option selected disabled value="">Selecione</option>
                     <?php foreach (NivelSenioridadeEnum::forSelect() as $indice => $valor): ?>
                         <option value="<?= $indice ?>" <?= !empty($vaga) && $vaga->getNivelSenioridade() == $indice ? 'selected' : '' ?>><?= $valor ?></option>
                     <?php endforeach; ?>
                 </select>
-                <label for="nivelSenioridade" class="col-form-label">Nível de Senioridade</label>
-            </div>
-
-            <!-- NÍVEL DE HIERARQUIA -->
-            <div class="col-md-6 form-floating">
-                <select class="form-control form-select" name="nivel_hierarquico" id="nivel_hierarquico" required>
-                    <option value="">Selecione</option>
+            </label>
+            <label class="form-control w-1/4">
+                <div class="label">
+                    <span class="label-text">Nível hierárquico</span>
+                </div>
+                <select class="select select-bordered" name="nivel_hierarquico" id="nivel_hierarquico" required>
+                    <option selected disabled value="">Selecione</option>
                     <?php foreach (NivelHierarquicoEnum::forSelect() as $indice => $valor): ?>
                         <option value="<?= $indice ?>" <?= !empty($vaga) && $vaga->getNivelHierarquico() == $indice ? 'selected' : '' ?>><?= $valor ?></option>
                     <?php endforeach; ?>
                 </select>
-                <label for="nivelHierarquia" class="col-form-label">Nível hierárquico</label>
-            </div>
-            <div class="row md-6 align-items-center mb-2">
-                <div class=" form-floating">
-                    <input type="text" class="form-control" name="cargo" id="cargo" >
-                    <label for="titulo" class="col-form-label">Cargo</label>
-                </div>
-                <div class="row md-6 align-items-center mb-2">
-                    <div class=" form-floating">
-                        <input type="text" class="form-control" name="endereco" id="endereco" >
-                        <label for="titulo" class="col-form-label">Endereco</label>
-                    </div>
-                    <div class="row md-3 align-items-center mb-2">
-                        <div class="col-md-2 form-floating">
-                            <input type="text" class="form-control" name="expediente" id="expediente" >
-                            <label for="expediente" class="col-form-label">Expediente</label>
-                        </div>
-                        <div class="row g-3 align-items-center mb-2">
-                            <div class="col-md-2 form-floating">
-                                <input type="text" class="form-control" name="data_inicio" id="data_inicio" value="">
-                                <label for="data_inicio" class="col-form-label">Data Inicio</label>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            </label>
         </div>
-        <div class="row gy-3 gy-md-4 overflow-hidden mt-4 mb-2">
-            <div class="col-12">
-                <div class="d-grid">
-                    <button class="btn btn-primary" type="submit">
-                        <i class="fas fa-save"></i> Salvar
-                    </button>
+        <div class="flex space-x-2">
+            <label class="form-control w-full">
+                <div class="label">
+                    <span class="label-text">Endereço do local de trabalho</span>
                 </div>
-            </div>
+                <input type="text" class="input input-bordered w-full" name="endereco" id="endereco">
+            </label>
+        </div>
+        <div class="flex space-x-2">
+            <label class="form-control w-3/4">
+                <div class="label">
+                    <span class="label-text">Expediente</span>
+                </div>
+                <input type="text" class="input input-bordered w-full" name="expediente" id="expediente">
+            </label>
+            <label class="form-control w-1/4">
+                <div class="label">
+                    <span class="label-text">Data de início</span>
+                </div>
+                <input type="text" class="input input-bordered w-full" name="data_inicio" id="data_inicio">
+            </label>
+        </div>
+        <div class="mt-6 flex items-center justify-end">
+            <button class="btn btn-success btn-wide" type="submit">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-4">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="m16.862 4.487 1.687-1.688a1.875 1.875 0 1 1 2.652 2.652L10.582 16.07a4.5 4.5 0 0 1-1.897 1.13L6 18l.8-2.685a4.5 4.5 0 0 1 1.13-1.897l8.932-8.931Zm0 0L19.5 7.125M18 14v4.75A2.25 2.25 0 0 1 15.75 21H5.25A2.25 2.25 0 0 1 3 18.75V8.25A2.25 2.25 0 0 1 5.25 6H10"/>
+                </svg>
+                Enviar proposta
+            </button>
         </div>
     </form>
-<script>
-    document.addEventListener('DOMContentLoaded', () => {
-        document.getElementById('searchInput').addEventListener('keyup', function () {
-            let searchTerm = this.value.toLowerCase();
-            let items = document.querySelectorAll('.habilidade-item');
-
-            items.forEach(function (item) {
-                let label = item.querySelector('label').textContent.toLowerCase();
-                if (label.includes(searchTerm)) {
-                    item.style.display = '';
-                } else {
-                    item.style.display = 'none';
-                }
-            });
-        });
-    });
-</script>
+</div>
