--- a/web/views/vaga/formulario.phtml
+++ b/web/views/vaga/formulario.phtml
@@ -171,7 +171,7 @@
 </div>
 
 <?php if (!empty($vaga)): ?>
-<div class="mx-auto max-w-4xl p-4 m-10">
+<div class="mx-auto max-w-4xl p-4 m-10" id="candidatos">
     <div class="divider"></div>
     <table class="border-collapse table-sm table-zebra border-collapse dark:border-slate-500 bg-white dark:bg-slate-800 text-sm shadow-sm w-full">
         <caption class="text-slate-500 dark:text-slate-400 pb-4 text-md caption-top p-4">Candidatos</caption>
@@ -201,13 +201,13 @@
                 <td class="border border-slate-300 dark:border-slate-700 text-slate-500 dark:text-slate-400 whitespace-nowrap text-center">
                     <?= $candidato_vaga->getStatus(true) ?>
                     <?php if ($candidato_vaga->getStatus() === CandidatoVagaStatusEnum::Desistencia->value): ?>
-                    <div class="label-text-alt text-neutral">
-                        <?= date('d/m/Y H:i:s', strtotime($candidato_vaga->getUltimaDesistencia())) ?>
-                    </div>
+                        <div class="label-text-alt text-neutral">
+                            <?= date('d/m/Y H:i:s', strtotime($candidato_vaga->getUltimaDesistencia())) ?>
+                        </div>
                     <?php endif; ?>
                 </td>
                 <td class="border border-slate-300 dark:border-slate-700 text-slate-500 dark:text-slate-400 whitespace-nowrap">
-                    <?php if ($candidato_vaga->getStatus() !== CandidatoVagaStatusEnum::Desistencia->value && $candidato_vaga->getStatus() !== CandidatoVagaStatusEnum::Aprovado->value && $candidato_vaga->getStatus() !== CandidatoVagaStatusEnum::Reprovado->value) : ?>
+                    <?php if (!in_array($candidato_vaga->getStatus(), [CandidatoVagaStatusEnum::Desistencia->value, CandidatoVagaStatusEnum::Aprovado->value, CandidatoVagaStatusEnum::Reprovado->value])) : ?>
                         <div class="flex justify-center space-x-1">
                             <a class="btn btn-xs h-8 w-8 border btn-square text-white btn-error " href="/vaga/processaMudancaDeStatus?id=<?= $vaga->getId() ?>&candidatoId=<?= $candidato_vaga->getCandidato()->getId() ?>&resultado=0" title="Reprovar" role="button">
                                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-4">
@@ -221,9 +221,14 @@
                             </a>
                         </div>
                     <?php endif; ?>
-                    <?php if($candidato_vaga->getStatus() == CandidatoVagaStatusEnum::Aprovado->value) : ?>
-                        <div class="d-grid gap-2 d-md-flex justify-content-md-center">
-                            <a class="btn btn-success" href="/propostas/cadastrar?id=<?= $vaga->getId()?>&candidatoId=<?= $candidato_vaga->getCandidato()->getId() ?>" target="_blank" type="submit">Enviar Proposta
+                    <?php if ($candidato_vaga->getStatus() == CandidatoVagaStatusEnum::Aprovado->value) : ?>
+                        <div class="flex justify-center space-x-1">
+                            <a class="btn btn-success btn-xs text-white" href="/propostas/cadastrar?id=<?= $vaga->getId() ?>&candidatoId=<?= $candidato_vaga->getCandidato()->getId() ?>" type="submit">
+                                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-4">
+                                    <path stroke-linecap="round" stroke-linejoin="round" d="m16.862 4.487 1.687-1.688a1.875 1.875 0 1 1 2.652 2.652L10.582 16.07a4.5 4.5 0 0 1-1.897 1.13L6 18l.8-2.685a4.5 4.5 0 0 1 1.13-1.897l8.932-8.931Zm0 0L19.5 7.125M18 14v4.75A2.25 2.25 0 0 1 15.75 21H5.25A2.25 2.25 0 0 1 3 18.75V8.25A2.25 2.25 0 0 1 5.25 6H10"/>
+                                </svg>
+
+                                Efetuar Proposta
                             </a>
                         </div>
                     <?php endif; ?>
