--- a/web/views/vaga/listar.phtml
+++ b/web/views/vaga/listar.phtml
@@ -1,4 +1,4 @@
-<div class="overflow-x-auto flex justify-center w-full">
+<div class="overflow-x-auto flex justify-center w-full mb-20">
     <table class="border-collapse table-sm table-zebra border-collapse dark:border-slate-500 bg-white dark:bg-slate-800 text-sm shadow-sm w-2/5">
         <caption class="text-slate-500 dark:text-slate-400 pb-4 text-md caption-top p-4">Minhas vagas</caption>
         <thead class="bg-slate-50 dark:bg-slate-700">
@@ -28,6 +28,11 @@
                         <a href="/vaga/editar?id=<?= $vaga->getId() ?>" title="Editar" class="btn btn-xs h-8 w-8 border btn-square">
                             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-4">
                                 <path stroke-linecap="round" stroke-linejoin="round" d="m16.862 4.487 1.687-1.688a1.875 1.875 0 1 1 2.652 2.652L10.582 16.07a4.5 4.5 0 0 1-1.897 1.13L6 18l.8-2.685a4.5 4.5 0 0 1 1.13-1.897l8.932-8.931Zm0 0L19.5 7.125M18 14v4.75A2.25 2.25 0 0 1 15.75 21H5.25A2.25 2.25 0 0 1 3 18.75V8.25A2.25 2.25 0 0 1 5.25 6H10" />
+                            </svg>
+                        </a>
+                        <a href="/vaga/editar?id=<?= $vaga->getId() ?>#candidatos" title="Ver candidatos" class="btn btn-xs h-8 w-8 border btn-square" <?=!$vaga->temCandidatos() ? "disabled" : ""?>>
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-4">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="M18 18.72a9.094 9.094 0 0 0 3.741-.479 3 3 0 0 0-4.682-2.72m.94 3.198.001.031c0 .225-.012.447-.037.666A11.944 11.944 0 0 1 12 21c-2.17 0-4.207-.576-5.963-1.584A6.062 6.062 0 0 1 6 18.719m12 0a5.971 5.971 0 0 0-.941-3.197m0 0A5.995 5.995 0 0 0 12 12.75a5.995 5.995 0 0 0-5.058 2.772m0 0a3 3 0 0 0-4.681 2.72 8.986 8.986 0 0 0 3.74.477m.94-3.197a5.971 5.971 0 0 0-.94 3.197M15 6.75a3 3 0 1 1-6 0 3 3 0 0 1 6 0Zm6 3a2.25 2.25 0 1 1-4.5 0 2.25 2.25 0 0 1 4.5 0Zm-13.5 0a2.25 2.25 0 1 1-4.5 0 2.25 2.25 0 0 1 4.5 0Z" />
                             </svg>
                         </a>
                         <a href="/vaga/excluir?id=<?= $vaga->getId() ?>" title="Excluir" class="btn btn-xs text-error h-8 w-8 border btn-square">
